@@ -1,3 +1,8 @@
+2012-10-23  Sergey Kashyrin <ska@kiska.net>
+
+   * fileio.c : Prevent runtime crash when ASSIGN is missing in SELECT FILE.
+                (well, it's better to fix the parser to give an error, but meanwhile...)
+
 2012-08-30  Luke Bryan <lukebryan@bdumail.com>
 
    * screenio.c : Added for extended Accept: 
